--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -82,7 +82,7 @@ commentstyle=\itshape\color{black!30},% comments
             {\Large\itshape For creating lightweight discord  bots in lua.}\\[4\baselineskip]
             {\Large Magicks}\par
             \vspace{0.4\textheight}
-            {\noindent\url{https://github.com/Mehgugs/novus.git}}\\[\baselineskip]
+            {\noindent\url{https://github.com/Mehgugs/novus}}\\[\baselineskip]
         }
         }
     }
